# wandas

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  ERROR_MESSAGE_IMPROVEMENTS.md  IMPLEMENTATION_ROUGHNESS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-THIRD-PARTY  NOTICE  PLAN_add_loudness_calculation.md  PLAN_add_loudness_zwtv.md  PR_SUMMARY.md  README.ja.md  README.md  SII_FEATURE_SUMMARY.md  index.html  objects.inv  pr-236-implementation-complexity.md  pyproject.toml  requirements.txt  setup.py  sitemap.xml  wandas-improvement-report.md
.devcontainer/: devcontainer.json
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: wandas-implementer.agent.md  wandas-planner.agent.md  wandas-publisher.agent.md  wandas-reviewer.agent.md
.github/instructions/: agent-maintenance.instructions.md  frames-design.instructions.md  io-contracts.instructions.md  pr-lifecycle-harness.instructions.md  processing-api.instructions.md  scalability-benchmark.instructions.md  test-frames-policy.instructions.md  test-grand-policy.instructions.md  test-io-policy.instructions.md  test-processing-policy.instructions.md  test-visualization-policy.instructions.md  testing-workflow.instructions.md  testing-workflow.prompt.md
.github/workflows/: cd.yml  ci.yml  copilot-setup-steps.yml  deploy-docs.yml  notify-agent.yml  performance.yml  release-drafter.yml
api/: index.html
api/core/: index.html
api/datasets/: index.html
api/frames/: index.html
api/io/: index.html
api/pipeline/: index.html
api/processing/: index.html
api/utils/: index.html
api/visualization/: index.html
api/wdf_io/: index.html
contributing/: index.html
contributing/agent-harness/: index.html
contributing/change-coherence/: index.html
contributing/frame-operation-extensions/: index.html
contributing/io-contracts/: index.html
docs/: SII_IMPLEMENTATION.md  mkdocs.yml  psychoacoustic_metrics.md
docs/design/: 2025-11-19-channel-wise-chunking.md  2026-06-09-xarray-native-migration.md  2026-06-10-xarray-dimension-semantics.md  2026-06-11-xarray-migration-consolidation.md  2026-06-17-ci-extras-strategy.md  2026-07-06-recipe-replay-and-interoperability.md  2026-07-06-runtime-history-and-source-time.md  2026-07-13-recipe-v2-architecture.md  2026-07-13-recipe-v2-test-migration.md  2026-07-14-recipe-v2-simplification-priorities.md  2026-07-16-v0.6-persistence-boundaries.md  2026-07-16-wandas-analyzer-responsibility-boundary.md  2026-07-21-immutable-frame-state-updates.md  INDEX.md
docs/development/: README.md  coding_standards.md  error_message_guide.md  testing_guide.md
docs/src/: contributing.md  index.en.md  index.md
docs/superpowers/: README.md
en/: index.html
en/api/: index.html
en/contributing/: index.html
en/en/: index.html
en/explanation/: index.html
en/frame_dataset_spec/: index.html
en/how_to/: index.html
en/ja/: index.html
en/tutorial/: index.html
examples/: 00_file_read.ipynb  01_basic_usage.ipynb  02_siganal_processing.ipynb  03_frame_dataset_usage.ipynb  FolderFrame.ipynb  README.md  basic_usage.ipynb  basic_usage.py  calculation.ipynb  compare_signal_usage.ipynb  demo_loudness_calculation.ipynb  demo_loudness_calculation.py  loudness_calculation_example.md  loudness_calculation_example.py  matarix_usage.ipynb  multidimensional_usage.py  roughness_example.py  speech_intelligibility_index.ipynb
examples/app/: sound_explorer.ipynb
explanation/: index.html
explanation/pipeline-recipe-design/: index.html
explanation/pipeline-recipe-developer-guide/: index.html
explanation/pipeline-recipe-extraction-boundaries/: index.html
explanation/pipeline-recipe-interoperability-export/: index.html
explanation/pipeline-recipe-requirements/: index.html
explanation/pipeline-recipe-support-matrix/: index.html
explanation/psychoacoustic_metrics/: index.html
explanation/public-api-stability/: index.html
explanation/scalability-contract/: index.html
frame_dataset_spec/: index.html
how-to/cepstral-analysis/: index.html
how-to/pipeline-recipes/: index.html
ja/: index.html
ja/api/: index.html
ja/contributing/: index.html
ja/explanation/: index.html
ja/how_to/: index.html
ja/tutorial/: index.html
learning-path/: 00_why_wandas.html  00_why_wandas.ipynb  00_why_wandas.py  01_getting_started copy.ipynb  01_getting_started.html  01_getting_started.ipynb  01_getting_started.py  02_working_with_data.ipynb  02_working_with_data.py  03_signal_processing_basics.html  03_signal_processing_basics.py  04_advanced_processing.html  04_advanced_processing.ipynb  04_advanced_processing.py  05_custom_functions.html  05_custom_functions.ipynb  05_custom_functions.py  05_visualization_and_insights.ipynb  06_pipeline_recipe_ux.html  06_pipeline_recipe_ux.ipynb  06_pipeline_recipe_ux.py  06_real_world_applications.ipynb  06_reusable_pipeline_recipes.html  06_reusable_pipeline_recipes.py  06_skill_validation.ipynb  07_conclusion_and_next_steps.ipynb  07_frame_centric_recipe_ux.html  07_frame_centric_recipe_ux.py  07_per_channel_calibration.html  07_per_channel_calibration.py  08_metadata_driven_dataset_search.html  08_metadata_driven_dataset_search.py  09_reference_signal_calibration.py  README.md  sensor_data.csv
scripts/: documentation_audio_examples.py  recipe_v1_test_inventory.txt  recipe_v2_benchmark.py  recipe_v2_kpi.py  recipe_v2_test_audit.py  scalability_benchmark.py  test_installation.py  validate_change_coherence.py
search/: search_index.json
tests/: frame_helpers.py  io_helpers.py  processing_helpers.py  test_coverage_improvement.py  test_error_messages.py  test_init.py  test_lineage_helpers.py  test_optional_dependencies.py  test_scalability_benchmark.py
tests/benchmarks/: README.md  (+3 more)
tutorial/: 00_setup.ipynb  02_signal_processing_basics.ipynb  03_visualization.ipynb  index.html  pipeline-recipe-requirements-check.ipynb  pipeline-recipes.ipynb
wandas/: __init__.py  lineage.py  xarray_bridge.py
(+414 files in other folders)
