[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wandas"
version = "0.1.0"
description = "Wandas is an open source library for efficient signal analysis in Python"
authors = [{name = "kasahart", email="kasahart66@gmail.com"}]
maintainers = [
    {name = "kasahart", email="kasahart66@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Topic :: Multimedia :: Sound/Audio :: Analysis',
    'Typing :: Typed',
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "librosa",
    "mosqito",
    "ipykernel",
    "ipywidgets",
    "cattrs",
    "ipympl>=0.9.3",
    "h5py>=3.13.0",
    "dask>=2024.8.0",
    "waveform-analysis",
    "japanize-matplotlib>=1.1.3",
    "ipycytoscape>=1.3.3",
    "pydantic>=2.11.0",
]

[project.urls]
Repository = "https://github.com/kasahart/wandas.git"
Issues = "https://github.com/kasahart/wandas/issues"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pandas",
    "pandas-stubs",
    "pytest-cov",
    "wandas",
    "pre-commit>=3.5.0",
    "mypy",
    "ruff>=0.9.9",
]

[tool.uv.sources]
wandas = { workspace = true }
waveform-analysis = { git = "https://github.com/endolith/waveform-analysis.git", rev = "master" }

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "UP", "I", "N"]

[tool.mypy]
files = ["wandas", "tests"]
strict = true
pretty = true
ignore_missing_imports = true

# scipy モジュールをmypyの型チェックから除外する設定
[[tool.mypy.overrides]]
module = ["scipy.*", "dask.*"]
ignore_errors = true

follow_imports = "skip"
