[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wandas"
version = "0.2.0"
description = "Wandas is an open source library for efficient signal analysis in Python"
authors = [{name = "kasahart", email="kasahart66@gmail.com"}]
maintainers = [
    {name = "kasahart", email="kasahart66@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE", "LICENSE-THIRD-PARTY"]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Topic :: Multimedia :: Sound/Audio :: Analysis',
    'Typing :: Typed',
]
dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.13.0",
    "matplotlib>=3.8.0",
    "ipykernel",
    "ipywidgets",
    "cattrs",
    "tqdm",
    "ipympl>=0.9.3",
    "h5py>=3.13.0",
    "dask>=2024.8.0",
    "japanize-matplotlib>=1.1.3",
    "ipycytoscape>=1.3.3",
    "pydantic>=2.11.0",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20250328",
    "pandas",
    "mosqito",
]

[project.optional-dependencies]
full = ["librosa"]

[project.urls]
Repository = "https://github.com/kasahart/wandas.git"
Issues = "https://github.com/kasahart/wandas/issues"

[dependency-groups]
# CI最小限（テスト・リント・型チェック）
test = [
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "pytest-cov",
    "ruff>=0.9.9",
    "ty>=0.0.26",
    "pandas-stubs",
]

# ドキュメント生成
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "markdown-exec>=1.10.3",
    "jupytext>=1.17.1",
    "ipykernel>=6.29.5",
    "marimo>=0.23.1",
]

# 開発補助ツール（ローカル開発用）
dev = [
    "pre-commit>=3.5.0",
    "wandas",
    "torch>=2.0.0",
    "tensorflow>=2.13.0",
]

[tool.uv.sources]
wandas = { workspace = true }

[tool.ruff]
line-length = 120
include = ["wandas/**/*.py", "tests/**/*.py"]
# 共通のruff設定はここにまとめる

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "UP", "I", "N"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty]
# すべてのルールをデフォルト (error) で適用。
# 意図的な型エラー (テスト内の pytest.raises 等) は行単位の
# `# ty: ignore[rule-name]` コメントで個別に抑制する。

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=wandas --cov-report=xml"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
norecursedirs = ["scripts"]

[tool.pre-commit]
use-uv = true

[tool.pre-commit.hooks]
ruff-check = { args = ["--fix", "wandas", "tests"] }
ruff-format = { args = ["wandas", "tests"] }
ty = { require-serial = true, args = ["check", "wandas", "tests"] }

[tool.ruff.lint.per-file-ignores]
# N802/N803: domain-conventional names (dB, Aw, G, ABC_weighting, ref_weighted_dB, etc.)
# kept as-is for readability and to avoid breaking the public API.
"wandas/processing/weighting.py" = ["N802", "N803"]
"wandas/processing/spectral.py" = ["N803"]
"wandas/processing/temporal.py" = ["N803"]
"wandas/utils/util.py" = ["N802"]
"wandas/processing/hpss.py" = ["N803", "N806"]
